--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "./node_modules/.bin/eslint ./",
+    "eslint-fix": "./node_modules/.bin/eslint ./ --fix",
     "start": "node ./index.js"
   },
   "repository": {
@@ -19,6 +21,11 @@
   "homepage": "https://github.com/kennhung/SimpleFood#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-google": "^0.11.0"
   }
 }
