--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A very simple food ordering system for small groups of people to use.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "eslint": "./node_modules/.bin/eslint ./",
     "eslint-fix": "./node_modules/.bin/eslint ./ --fix",
-    "start": "node ./index.js --port=3000 --dbString=mongodb://localhost:27017/SimpleFoods"
+    "start": "node ./index.js --port=3000 --dbString=mongodb://localhost:27017/SimpleFoods --dbName=SimpleFoods"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^5.12.0",
-    "eslint-config-google": "^0.11.0"
+    "eslint-config-google": "^0.11.0",
+    "mocha": "^5.2.0"
   }
 }
