--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "command-line-args": "^5.0.2",
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
